Test: adding more tests for the core

--- a/cypress/html/core.html
+++ b/cypress/html/core.html
@@ -7,7 +7,7 @@
 		<title>Core Test</title>
 	</head>
 	<body>
-		<div id="trigger">
+		<div id="target">
 			<div id="child"></div>
 		</div>
 		<script src="http://localhost:3000/cypress/scripts/build/core/core.js"></script>
